--- a/src/main/resources/templates/partials/head.html
+++ b/src/main/resources/templates/partials/head.html
@@ -1,5 +1,6 @@
 
-  <title th:text="${param.title}"></title>
-  <link rel="stylesheet" href="/static/CSS/layout.css" />
-  <link rel="stylesheet" href="/static/CSS/resets.css" />
+<!--  <title th:text="${param.title}"></title>-->
+  <link rel="stylesheet" href="/CSS/layout.css" />
+<!--  <link rel="stylesheet" href="/CSS/resets.css" />-->
+  <link rel="stylesheet" href="/CSS/retro.css" />
 
