--- a/src/main/resources/templates/partials/header.html
+++ b/src/main/resources/templates/partials/header.html
@@ -1,5 +1,4 @@
-<header>
-  <!-- Header content goes here -->
+<header class="blog-header">
   <h1>My Website</h1>
-  <p>Welcome to my website!</p>
+  <p class="header-description">This is a project that demonstrates the basic functionality of the Spring framework. Spring is a powerful and popular Java framework that provides comprehensive support for building robust and scalable applications. It offers features like inversion of control (IoC), dependency injection, aspect-oriented programming (AOP), and seamless integration with various other frameworks and libraries. With its modular architecture and extensive ecosystem, Spring simplifies development, promotes code reusability, and enhances productivity for Java developers.</p>
 </header>
