--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -1,7 +1,10 @@
 <nav>
   <!-- Navbar content goes here -->
-  <a href="/home">Home</a>
-  <a href="/about">About</a>
-  <a href="/contact">Contact</a>
-  <a href="/roll-dice">Dice Roll Game</a>
+  <a href="/home" class="nav-button">Home</a>
+  <a href="/about" class="nav-button">About</a>
+  <a href="/contact" class="nav-button">Contact</a>
+  <a href="/roll-dice" class="nav-button">Dice Roll Game</a>
+  <a href="/posts" class="nav-button">Blog Posts</a>
+  <a href="/posts/create" class="nav-button">Create</a>
+  <a href="/register" class="nav-button">Register</a>
 </nav>
