--- a/src/main/resources/templates/partials/footer.html
+++ b/src/main/resources/templates/partials/footer.html
@@ -1,4 +1,3 @@
-<footer>
-  <!-- Footer content goes here -->
-  <p>&copy; 2023 My Website. All rights reserved.</p>
+<footer class="retro-footer">
+  <p>&copy; 2023 SpringBlog Project. All rights reserved.</p>
 </footer>
