--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -7,8 +7,11 @@
 <body>
 <h1>Post Details</h1>
 
-<h2>Title: <span th:text="${post.title}"></span></h2>
-<p>Body: <span th:text="${post.body}"></span></p>
+<div>
+  <h3>Title: <span th:text="${post.title}"></span></h3>
+  <p>Description: <span th:text="${post.description}"></span></p>
+  <p>Created by: <span th:text="${post.user.email}"></span></p>
+</div>
 
 <a href="/posts">Back to All Posts</a>
 </body>
